fix-bug: navbar bg-color & button pattern

--- a/home.html
+++ b/home.html
@@ -21,10 +21,10 @@
     <link rel="stylesheet" href="css/vars.css" />
     <title>TwoPresents</title>
   </head>
-  <body>
+  <body id="homepage-design-body">
     <div class="container-fluid sticky-top m-auto p-0" id="frame-79">
       <!-- navigation bar -->
-      <nav class="m-auto navbar navbar-expand-lg p-0 pb-4 pb-lg-0" id="nav-bar">
+      <nav class="m-auto navbar navbar-expand-lg p-0" id="nav-bar">
         <div
           class="container-fluid w-100 h-100 mt-3 mt-lg-0 ps-3 ps-lg-0 pe-4 pe-lg-0 py-lg-3"
           id="frame-1"
@@ -48,7 +48,10 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="navbar-collapse text-center collapse" id="navbarNav">
+          <div
+            class="navbar-collapse pb-4 pb-lg-0 text-center collapse"
+            id="navbarNav"
+          >
             <ul
               class="navbar-nav align-items-center ms-auto my-3 my-lg-0 gap-3 gap-lg-5"
               id="auto-layout-horizontal2"
@@ -82,7 +85,7 @@
                   >Log In</a
                 >
               </li>
-              <button class="primary-button fields" id="get-started">
+              <button class="primary-button fields" id="get-started-btn">
                 GET STARTED
               </button>
             </ul>
@@ -125,7 +128,7 @@
             </h3>
           </div>
 
-          <button class="cta-button fields" id="get-started">
+          <button class="cta-button fields" id="get-started-btn">
             GET STARTED
           </button>
         </div>
