hotfix: relative path of svg

--- a/start.html
+++ b/start.html
@@ -121,7 +121,7 @@
               id="icon-party"
             >
               <div id="ellipse-144"></div>
-              <img src="src/img/Party.svg" />
+              <img src="./src/img/Party.svg" class="img-fluid" />
             </div>
 
             <div
@@ -204,7 +204,7 @@
               id="icon-contributions"
             >
               <div id="ellipse-149"></div>
-              <img src="src/img/Contributions.svg" class="" />
+              <img src="./src/img/Contributions.svg" class="img-fluid" />
             </div>
             <div
               class="card-body d-flex flex-column flex-grow-0 gap-2 mb-2 mb-sm-4 pb-1 pb-sm-2"
