--- a/start.html
+++ b/start.html
@@ -81,11 +81,14 @@
               class="align-items-center gap-3 mb-2 mb-lg-0 ms-auto mt-4 mt-lg-0 navbar-nav pb-1 pb-lg-0"
             >
               <li class="nav-item mx-1 px-4 py-2">
-                <a class="nav-link text-center fields p-0" href="#" id="log-in"
+                <a
+                  class="nav-link text-center cta-text p-0"
+                  href="#"
+                  id="log-in"
                   >Log In</a
                 >
               </li>
-              <button class="primary-button fields" id="get-started-btn">
+              <button class="primary-button cta-text" id="get-started-btn">
                 GET STARTED
               </button>
             </ul>
@@ -183,7 +186,7 @@
               </li>
             </ul>
             <button
-              class="align-self-center fields mb-2 mb-sm-4 mt-2 mt-sm-0 small-button"
+              class="align-self-center cta-text mb-2 mb-sm-4 mt-2 mt-sm-0 small-button"
               id="button-select"
             >
               Select
@@ -248,7 +251,7 @@
               </li>
             </ul>
             <button
-              class="align-self-center fields mb-2 mb-sm-4 mt-2 mt-sm-0 small-button"
+              class="align-self-center cta-text mb-2 mb-sm-4 mt-2 mt-sm-0 small-button"
               id="button-select"
             >
               Select
